home spacing fix

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -48,6 +48,10 @@ $txtsize: 16px;
     color: $stcolor;
 }
 
+.stip-mb{
+    margin-bottom: 5em;
+}
+
 .stip-hideMe {
     opacity: 0;
 }
